fixed table border-box bug on ios

--- a/frontend/app/app.styl
+++ b/frontend/app/app.styl
@@ -8,10 +8,10 @@ body{
   background-image: linear-gradient(#eee .1em, transparent .1em);
   background-size: 100% 1.2em;
   @media only screen and (max-width: 768px){
-    font-size: 18px;
+    font-size: 22px;
   }
   @media only screen and (max-width: 480px) {
-    font-size: 10px;
+    font-size: 14px;
   }
 }
 
@@ -40,7 +40,6 @@ h1{
     box-shadow: 0.3em 0.3em 0.2em rgba(0, 0, 0, 0.6);
   }
   td{
-    display: inline-block;
     text-align: center;
     background-color: white;
   }
@@ -71,19 +70,10 @@ h1{
     width: 2em;
     height: 2em;
     border: 0;
-    text-align:center;
+    text-align: center;
     font-size: 1em;
+    box-sizing: border-box;
     background-color: inherit;
-    // @media only screen and (max-width: 768px){
-    //   font-size: 24px;
-    //   width: 1px;
-
-    // }
-    // @media only screen and (max-width: 480px) {
-    //   font-size: 14px;
-    //   width: 100px;
-
-    // }
   }
 }
 #new-game-overlay{
